--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  position: relative;
   @include m.tablet {
     align-items: center;
     justify-content: center;
