--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -87,6 +87,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  position: relative;
 }
 @media (min-width: 768px) {
   body {
@@ -235,11 +236,20 @@ body {
 }
 
 .footer {
-  text-align: center;
-  color: #19212e;
-  font-weight: 600;
+  display: none;
 }
-.footer__link {
-  text-decoration: none;
-  color: #3e52a3;
+@media (min-width: 1024px) {
+  .footer {
+    padding: 2rem;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    color: #19212e;
+    font-weight: 600;
+  }
+  .footer__link {
+    text-decoration: none;
+    color: #3e52a3;
+  }
 }/*# sourceMappingURL=app.css.map */
